--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,16 +1,160 @@
 body {
+  
+  
+}
+
+.home {
+  height: 100vh;
   width: 100%;
-  height: 100%;
   position: fixed;
-  background-color: #34495e;
+  background-color: #FCA18C;
+}
+
+.home-opened {
+  height: 200vh;
+  background-color: #ff5555;
+}
+
+.my-navbar {
+  background-color: transparent;
+}
+
+.side-screen-img {
+  width: 400px;
+}
+
+.loading-animation {
+  height: 100vh;
+  //background-color: #FCA18C;
+
+  .app-loading {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+  }
+  .app-loading .spinner {
+    height: 200px;
+    width: 200px;
+    animation: rotate 2s linear infinite;
+    transform-origin: center center;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+  }
+
+  .heart {
+    height: 60px;
+    width: 60px;
+    transform-origin: center center;
+    position: absolute;
+    margin: auto;
+  }
+
+  .beating-heart {
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    animation: beat .5s linear infinite;
+  }
+
+  .app-loading .heart .path {
+    stroke-dasharray: 1, 200;
+    stroke-dashoffset: 0;
+    stroke-linecap: round;
+    fill: #ff5555;
+  }
+
+  .app-loading .spinner .path {
+    stroke-dasharray: 1, 200;
+    stroke-dashoffset: 0;
+    animation: dash 1.5s ease-in-out infinite;
+    stroke-linecap: round;
+    stroke: #eee;
+    display: none;
+  }
+
+    // The bits you want to see
+    .beat-loader{
+      stroke: #eee;
+      stroke-dasharray: 175;
+      stroke-dashoffset: 350;
+      animation: draw 3s linear infinite;
+    }
+
+    .moving-heart {
+      animation: move-heart 1.5s linear forwards;
+    }
+
+    .bulb {
+      height: 400px;
+      width: 400px;
+      transform-origin: center center;
+      position: absolute;
+      margin: auto;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 50%;
+
+      animation: appear 1s linear;
+
+      path {
+        fill: #eee;
+      }
+    }
+
+  // The animation
+  @keyframes draw {
+    to{
+      stroke-dashoffset: 0;
+    }
+  }
+
+  @keyframes beat {
+    to { transform: scale(1.4); }
+  }
+  @keyframes rotate {
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+  @keyframes dash {
+    0% {
+      stroke-dasharray: 1, 200;
+      stroke-dashoffset: 0;
+    }
+    50% {
+      stroke-dasharray: 89, 200;
+      stroke-dashoffset: -35px;
+    }
+    100% {
+      stroke-dasharray: 89, 200;
+      stroke-dashoffset: -124px;
+    }
+  }
+
+  @keyframes move-heart {
+    0% {
+      transform: scale(1.0);
+    }
+    100% {
+      transform: scale(100.0);
+    }
+  }
 }
 
 .content {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  height: 160px;
+  position: fixed;
+  top: 25%;
+  left: 0%;
+  height: 500px;
   overflow:hidden;
   
   font-family: 'Lato', sans-serif;
@@ -65,10 +209,12 @@ body {
       
       -webkit-animation-name: change;
       -webkit-animation-duration: 10s;
-      -webkit-animation-iteration-count: infinite;
+      -webkit-animation-iteration-count: 1;
+      -webkit-animation-fill-mode: forwards;
       animation-name: change;
       animation-duration: 10s;
-      animation-iteration-count: infinite;
+      animation-iteration-count: 1;
+      animation-fill-mode: forwards;
 
       &__item {
         line-height:40px;
@@ -84,12 +230,8 @@ body {
 }
 
 @-webkit-keyframes change {
-  0%, 12.66%, 100% {transform:translate3d(0,0,0);}
-  16.66%, 29.32% {transform:translate3d(0,-25%,0);}
-  33.32%,45.98% {transform:translate3d(0,-50%,0);}
-  49.98%,62.64% {transform:translate3d(0,-75%,0);}
-  66.64%,79.3% {transform:translate3d(0,-50%,0);}
-  83.3%,95.96% {transform:translate3d(0,-25%,0);}
+  0%, 50% {transform:translate3d(0,0,0);}
+  50%, 100% {transform:translate3d(0,-50%,0);}
 }
 
 @-o-keyframes opacity {
@@ -98,12 +240,8 @@ body {
 }
 
 @-o-keyframes change {
-  0%, 12.66%, 100% {transform:translate3d(0,0,0);}
-  16.66%, 29.32% {transform:translate3d(0,-25%,0);}
-  33.32%,45.98% {transform:translate3d(0,-50%,0);}
-  49.98%,62.64% {transform:translate3d(0,-75%,0);}
-  66.64%,79.3% {transform:translate3d(0,-50%,0);}
-  83.3%,95.96% {transform:translate3d(0,-25%,0);}
+  0%, 50% {transform:translate3d(0,0,0);}
+  50%, 100% {transform:translate3d(0,-50%,0);}
 }
 
 @-moz-keyframes opacity {
@@ -112,12 +250,8 @@ body {
 }
 
 @-moz-keyframes change {
-  0%, 12.66%, 100% {transform:translate3d(0,0,0);}
-  16.66%, 29.32% {transform:translate3d(0,-25%,0);}
-  33.32%,45.98% {transform:translate3d(0,-50%,0);}
-  49.98%,62.64% {transform:translate3d(0,-75%,0);}
-  66.64%,79.3% {transform:translate3d(0,-50%,0);}
-  83.3%,95.96% {transform:translate3d(0,-25%,0);}
+  0%, 50% {transform:translate3d(0,0,0);}
+  50%, 100% {transform:translate3d(0,-50%,0);}
 }
 
 @keyframes opacity {
@@ -126,12 +260,18 @@ body {
 }
 
 @keyframes change {
-  0%, 12.66%, 100% {transform:translate3d(0,0,0);}
-  16.66%, 29.32% {transform:translate3d(0,-25%,0);}
-  33.32%,45.98% {transform:translate3d(0,-50%,0);}
-  49.98%,62.64% {transform:translate3d(0,-75%,0);}
-  66.64%,79.3% {transform:translate3d(0,-50%,0);}
-  83.3%,95.96% {transform:translate3d(0,-25%,0);}
+  0%, 50% {transform:translate3d(0,0,0);}
+  50%, 100% {transform:translate3d(0,-50%,0);}
+}
+
+@keyframes disappear {
+  0% {opacity: 1;}
+  100% {opacity: 0;}
+}
+
+@keyframes appear {
+  0% {opacity: 0;}
+  100% {opacity: 1;}
 }
 
 // 6 is the number of animation.
