--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,29 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~bootstrap/dist/css/bootstrap.css";
+
+body {
+	margin: 0px !important;
+	//overflow: hidden;
+}
+
+@media (min-width: 768px) {
+	.navbar-nav {
+		width: 100%;
+		text-align: center;
+	}
+	.navbar-nav > li {
+		float: none;
+		display: inline-block;
+	}
+
+	.navbar-nav > li.navbar-right {
+	float: right !important;
+}
+}
+
+@media (max-width: 768px) {
+	.navbar-nav {
+		width: 100%;
+		text-align: right;
+	}
+}
