--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,6 +1,6 @@
 body {
-  
-  
+
+
 }
 
 .home {
@@ -11,8 +11,35 @@ body {
 }
 
 .home-opened {
-  height: 200vh;
+  height: 450vh;
+  width: 100%;
+  position: absolute;
   background-color: #ff5555;
+}
+
+.home-relative {
+  position: relative;
+}
+
+.home-absolute {
+  //position: absolute;
+}
+
+.work-grid {
+  margin-top: 450vh;
+  width: 100%;
+  overflow: hidden;
+  background-color: #eee;
+}
+
+.emphasis-1 {
+  font-weight: bold;
+  color: #ffc862;
+}
+
+.emphasis-2 {
+  font-weight: bold;
+  color: #a0daff;
 }
 
 .my-navbar {
@@ -20,7 +47,25 @@ body {
 }
 
 .side-screen-img {
-  width: 400px;
+  width: 450px;
+  position: absolute;
+}
+
+.name {
+  margin-bottom: 100px;
+  font-size: 50px;
+}
+
+.smaller-name {
+  //font-family: 'Lato', sans-serif;
+  font-size: 35px;
+  //line-height: 40px;
+  //color: #ecf0f1;
+  color: rgba(236, 240, 241, 0.5);
+}
+
+.intro-1 {
+  position: float;
 }
 
 .loading-animation {
@@ -151,77 +196,31 @@ body {
 }
 
 .content {
-  position: fixed;
-  top: 25%;
+  padding-top: 15%;
   left: 0%;
-  height: 500px;
-  overflow:hidden;
+  width: 100%;
   
   font-family: 'Lato', sans-serif;
   font-size: 35px;
-  line-height: 40px;
+  //line-height: 40px;
   color: #ecf0f1;
-  
-  &__container {
-    font-weight: 600;
-    overflow: hidden;
-    height: 40px;
-    padding: 0 40px;
+}
 
-    &:before {
-      content: '[';
-      left: 0;
-    }
+.fixed-content {
+  position: fixed;
+}
 
-    &:after {
-      content: ']';
-      position: absolute;
-      right: 0;
-    }
+.relative-content {
+  position: relative;
+}
 
-    &:after, &:before {
-      position: absolute;
-      top: 0;
-      
-      color: #16a085;
-      font-size: 42px;
-      line-height: 40px;
-      
-      -webkit-animation-name: opacity;
-      -webkit-animation-duration: 2s;
-      -webkit-animation-iteration-count: infinite;
-      animation-name: opacity;
-      animation-duration: 2s;
-      animation-iteration-count: infinite;
-    }
+.absolute-content {
+  position: absolute;
+  top: 350vh;
+}
 
-    &__text {
-      display: inline;
-      float: left;
-      margin: 0;
-    }
-
-    &__list {
-      margin-top: 0;
-      padding-left: 110px;
-      text-align: left;
-      list-style: none;
-      
-      -webkit-animation-name: change;
-      -webkit-animation-duration: 10s;
-      -webkit-animation-iteration-count: 1;
-      -webkit-animation-fill-mode: forwards;
-      animation-name: change;
-      animation-duration: 10s;
-      animation-iteration-count: 1;
-      animation-fill-mode: forwards;
-
-      &__item {
-        line-height:40px;
-        margin:0;
-      }
-    }
-  }
+.text-block {
+  padding-top: 5%;
 }
 
 @-webkit-keyframes opacity {
@@ -272,6 +271,76 @@ body {
 @keyframes appear {
   0% {opacity: 0;}
   100% {opacity: 1;}
+}
+
+.square {
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+}
+
+.square:after {
+  content: "";
+  display: block;
+  padding-bottom: 100%;
+}
+
+.thumb-image {
+  //min-width: 50%;
+
+  img {
+    max-width: 100%;
+    box-shadow: 10px 10px 5px grey;
+  }
+}
+
+.crop-img {
+  object-fit: cover;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+.frame-square {
+  background: #fff;
+  border: 2px solid #000;
+  display: inline-block;
+  vertical-align: top;
+  padding: 10px;
+  margin-right: .5em;
+  margin-bottom: .3em;
+}
+
+.frame-round {
+  @extend .frame-square;
+  border-radius: 50%;
+  overflow: hidden;
+  
+  .crop {border-radius: 50%;}
+}
+
+.crop {
+  height: 100%;
+  overflow: hidden;
+  position: relative;
+  
+  img {
+    display: block;
+    min-width: 100%;
+    min-height: 100%;
+    margin: auto;
+    position: absolute;
+    top: -100%;
+    right: -100%;
+    bottom: -100%;
+    left: -100%;
+    object-fit: cover;
+  }
+}
+
+.row {
+  margin-right: 0px !important;
+  margin-left: 0px !important;
 }
 
 // 6 is the number of animation.
