--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap/dist/css/bootstrap.css";
 @import "~animate.css/animate.min.css";
+@import "~font-awesome/css/font-awesome.css";
 
 body {
 	margin: 0px !important;
