--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -19,7 +19,7 @@ body {
 }
 
 .home-opened {
-  height: 450vh;
+  height: 500vh;
   width: 100%;
   position: absolute;
   background-color: #ff5555;
@@ -35,15 +35,16 @@ body {
 }
 
 .work-grid {
-  margin-top: 450vh;
+  margin-top: 500vh;
   width: 100%;
   overflow: hidden;
   background-color: #eee;
+  //padding-top: 100px;
 }
 
 .emphasis-1 {
   font-weight: bold;
-  color: #ffc862;
+  //color: #ffdc7a;
 }
 
 .emphasis-2 {
@@ -56,13 +57,14 @@ body {
 }
 
 .side-screen-img {
-  width: 450px;
+  width: 500px;
   position: absolute;
 }
 
 .name {
-  margin-bottom: 100px;
-  font-size: 50px;
+  margin-bottom: 50px;
+  font-size: 60px;
+  font-family: 'Lustria', serif;
 }
 
 .smaller-name {
@@ -208,11 +210,13 @@ body {
   padding-top: 10%;
   left: 0%;
   width: 100%;
+  height: 100vh;
   
   font-family: 'Lato', sans-serif;
-  font-size: 28px;
+  font-size: 24px;
   //line-height: 40px;
   color: #ecf0f1;
+  overflow: hidden;
 }
 
 .fixed-content {
@@ -225,11 +229,12 @@ body {
 
 .absolute-content {
   position: absolute;
-  top: 350vh;
+  top: 400vh;
 }
 
 .text-block {
   padding-top: 5%;
+  //background-color: black;
 }
 
 @-webkit-keyframes opacity {
@@ -285,7 +290,7 @@ body {
 .square {
   position: relative;
   width: 100%;
-  overflow: hidden;
+  //overflow: hidden;
 }
 
 .square:after {
@@ -299,7 +304,7 @@ body {
 
   img {
     max-width: 100%;
-    box-shadow: 10px 10px 5px grey;
+    box-shadow: 0 37.125px 40px -12.125px rgba(255,126,141,0.2);
   }
 }
 
@@ -362,6 +367,7 @@ body {
   font-weight: bold;
     //text-transform: uppercase;
     position: relative;
+    font-size: 55px;
     //font-size: 30px;
   }
 
@@ -371,8 +377,8 @@ body {
     left: 0;
     right: 0;
     bottom: 0%;
-    height: .15em;
-    background: #FDB92D;
+    height: .12em;
+    //background: #ffdc7a;
     opacity: .8;
   }
 
@@ -382,6 +388,87 @@ body {
     position: absolute;
     left: 0px;
     background: #FDB92D;
+  }
+
+  .img-col {
+    padding-left: 0px !important;
+  }
+
+  .ocean { 
+    height: 20%;
+    width: 100%;
+    position:absolute;
+    bottom:0px;
+    left:0;
+    //background: #015871;
+  }
+
+  .wave {
+    background: url(../../assets/img/wave.svg) repeat-x; 
+    //position: absolute;
+    bottom: 0px;
+    //width: 6400px;
+    height: 198px;
+    animation: wave 7s cubic-bezier( 0.36, 0.45, 0.63, 0.53) infinite;
+    transform: translate3d(0, 0, 0);
+  }
+
+  .ocean2 { 
+    height: 20%;
+    width: 100%;
+    left:0;
+    transform: rotate(180deg);
+    //background: #015871;
+  }
+
+  .wave2 {
+    background: url(../../assets/img/wave3.svg) repeat-x; 
+    //position: absolute;
+    bottom: 0px;
+    //width: 6400px;
+    height: 198px;
+    animation: wave2 7s cubic-bezier( 0.36, 0.45, 0.63, 0.53) -.125s infinite;
+    transform: translate3d(0, 0, 0);
+  }
+
+  .wave:nth-of-type(2) {
+    top: -175px;
+    animation: wave 7s cubic-bezier( 0.36, 0.45, 0.63, 0.53) -.125s infinite, swell 7s ease -1.25s infinite;
+    opacity: 1;
+  }
+
+  @keyframes wave2 {
+    0% {
+      margin-left: 0;
+    }
+    100% {
+      margin-left: -1600px;
+    }
+  }
+
+  @keyframes wave {
+    0% {
+      margin-left: 0;
+    }
+    100% {
+      margin-left: -1600px;
+    }
+  }
+
+  @keyframes swell {
+    0%, 100% {
+      transform: translate3d(0,-25px,0);
+    }
+    50% {
+      transform: translate3d(0,5px,0);
+    }
+  }
+
+  .section-title {
+    font-family: 'Lustria', serif;
+    text-align: center;
+    font-size: 30px;
+    margin-bottom: 50px;
   }
 
 // 6 is the number of animation.
