--- a/src/app/stretch/stretch.component.html
+++ b/src/app/stretch/stretch.component.html
@@ -24,7 +24,7 @@
 </nav>
 
 
-<div class="stretch-page">
+<div class="stretch-page page">
 	<div class="row banner justify-content-around">
 		<div class="titles col-lg-4 col-sm-4">
 			<p class="banner-title">
@@ -160,7 +160,6 @@
 				<!--<p class="big-part-sub-title"> How did we come here </p>-->
 			</div>
 			<div class="mid-font-content">
-				<p> Process & Timeline & Double Diamond</p>
 				<img class="part-img" src="assets/img/stretch-timeline.png">
 			</div>
 		</div>
@@ -323,7 +322,8 @@
 				<div class="section">
 					<p class="sub-title"> <b> Oppotunities for Application </b> </p>
 					<p class="sub-big-title"> <b> Key Inspirations </b> </p>
-					<div class="row">
+
+					<div class="row margin-50">
 						<div class="col-lg-6 col-sm-6 interview-photos">
 							<p class="insight-title-medium"><b>Plan and do with a <b class="color-emphasis">big picture</b> in mind</b></p>
 							<div class="insight-content-medium">
@@ -510,60 +510,102 @@
 				<div class="section">
 					<p class="sub-title"> <b> Design Goals </b> </p>
 					<p class="sub-big-title"> Establishing Guidelines </p>
-					<p> To guide the the product design, we first set up key goals for the product to achieve. We referred to the top 10 psychological needs based on Sheldon et al. to help us see from users' perspectives and establish guidlines for designing the experience to be created for users.</p>
-					<div class="section">
-						<img src="assets/img/stretch-psychology.png" class="img-70">
-						<p class="note-paragraph"> Key psychological needs to address </p>
-					</div>
+					<p> To guide the the product design, we first set up key goals for the product to achieve. Based on our iterative findings about users' needs, we referred to the top 10 psychological needs according to Sheldon et al. to summarize and establish guidlines for designing the experience.</p>
+				</div>
+				<div class="section">
+					<img src="assets/img/stretch-guidelines.png" class="part-img">
+					<p class="note-paragraph"> The 3 key guidelines of the design </p>
+				</div>
 
+					<!--
 					<div class="section">
 						<ul>
 							<li><b>What users want to achieve:</b> Making a better use of resources (i.e. time, money, food) to be in control of their eating.</li>
 							<li><b>What users need to do to achieve these goals:</b> Better food planning and management practice.</li>
 							<li><b>What the product can provide to help them achieve:</b> Better support of food planning and management knowledge and skills.</li>
 						</ul>
-						<!--<p>It helps people to manage budgets properly to get food that is sufficient for a period, and it helps people to save time by preparing something extra and utilize in the future.</p>-->
+						<p>It helps people to manage budgets properly to get food that is sufficient for a period, and it helps people to save time by preparing something extra and utilize in the future.</p>
+					</div> -->
+
+					<div class="section">
+						<p class="sub-title"> <b> Top down </b> </p>
+						<p class="sub-big-title"> Design Overview </p>
+						<div class="section">
+							<img src="assets/img/stretch-features.png" class="part-img">
+							<p class="note-paragraph"> Key features </p>
+						</div>
+						<div class="section">
+							<img src="assets/img/stretch-ia.jpg" class="part-img">
+							<p class="note-paragraph"> Information Architecture </p>
+						</div>
+						<div class="section">
+							<img src="assets/img/stretch-wireframe.png" class="part-img">
+							<p class="note-paragraph"> MVP wireframes </p>
+						</div>
 					</div>
 
+					<!--
 					<div class="section">
 						<p class="sub-title"> <b> Testing the Core </b> </p>
 						<p class="sub-big-title"> MVP Design </p>
 						<p>Therefore, based on the previous ideations and the goal analysis, we came up with <b>Stretch</b>, a mobile app meal planner that featuring stretching meals as the key concept, to help users better plan and manage their food. </p>
 						<p>To begin with, we came up with the MVP that captured the core feature: planning for streched meals. Here shows the wireframes of the MVP. </p>
 						<img src="assets/img/stretch-wireframe.png" class="part-img">
-
-					</div>
+					</div> -->
 
 					<div class="section">
 						<p class="sub-title"> <b> Final Design </b> </p>
-						<p class="sub-big-title"> Skinning the Product </p>
-						<img src="assets/img/stretch-features.png" class="part-img">
+						<p class="sub-big-title"> Design Highlights </p>		
 					</div>
-
-					<p> Features timeline & structure </p>
-
-					<p> Flowchart & wireframe </p>
-					<p> Hi-fi & key features animation</p>
 				</div>
-			</div>
-		</div>
-	</div>
 
-	<div class="big-part">
-		<div class="big-part-inner">
-			<div class="big-part-head">
-				<p class="big-part-title"> Reflection </p>
-				<!--<p class="big-part-sub-title"> How did we come here </p>-->
-			</div>
-			<div class="mid-font-content">
-				<p> Validation: concept & usability </p>
-				<p> Iteration & new features </p>
-				<p> Future plan </p>
+				<div class="section-150">
+					<p class="center-align demo-title"><b> 1) Flexible cooking time arrangement based on users' availability </b></p>
+					<p class="center-align demo-description-med"> Time is one of the huge concerns. Therefore, we considered the design where preparation from scratch is no longer necessary for every meal: based on one's availability of cooking, meals can be arranged to fit into one's schedule and save time. Stretching food happens in 2 forms: repurpousing food prepared in previous meals to make new meals, and directly eating the extra-prepared meal. </p>
+					<div class="row justify-content-center">
+						<div class="col-sm-9 col-lg-9">
+							<img src="assets/img/stretch-highlight1.png" class="part-img">
+						</div>
+					</div>
+				</div>
+
+				<div class="section-150">
+					<p class="center-align demo-title"><b> 2) Flexible adjustment towards planned meals in case of changes </b></p>
+					<p class="center-align demo-description-med"> To ensure flexibility in order to lower the barrier for users to follow plans, adjustments are allowed to be made on planned meals. When the user is no longer able to prepare a meal, he/she can choose to postpone, skip, and edit it. Depending on cases, plan could be kept the same, or modified for resource optimization. </p>
+					<div class="row">
+						<div class="col-sm-12 col-lg-12">
+							<img src="assets/img/stretch-highlight2.png" class="part-img">
+						</div>
+					</div>
+				</div>
+
 				<div>
+					<p class="center-align demo-title"><b> 3) Smart ingredients planning in improvement of food usage efficiency </b></p>
+					<p class="center-align demo-description-med"> To improve food usage efficiency, the user will be recommended to use food he/she already has in the pantry, and meal plans containing the ingredients will be generated to ensure food is consumed before expiry, and that food usage is efficient. </p>
+					<div class="row justify-content-center">
+						<div class="col-sm-9 col-lg-9">
+							<img src="assets/img/stretch-highlight3.png" class="part-img">
+						</div>
+					</div>
+				</div>
+
+			</div>
+		</div>
+
+		<div class="big-part">
+			<div class="big-part-inner">
+				<div class="big-part-head">
+					<p class="big-part-title"> Reflection </p>
+					<!--<p class="big-part-sub-title"> How did we come here </p>-->
+				</div>
+				<div class="mid-font-content">
+					<ul>
+						<li><b>Be flexible:</b> There is no such thing as universal design process: sometimes instead of sticking to a design cookbook, diving into research insights and be flexible enough to switch between directions is much more important.</li>
+						<li><b>And, be flexible:</b> In different stages of design, designer's mindset is expected to change and adjust: sometimes from top-down view, sometimes from down-top view, sometimes diverging, sometimes converging, sometimes focusing on details, sometimes focusing on overview. It is very important to identify the right strategy in different situations, and be open-minded to jump forwards and backwards.</li>
+					</ul>
 				</div>
 			</div>
 		</div>
-	</div>
 
 <!--
 		<div class="row section">
