--- a/src/app/stretch/stretch.component.scss
+++ b/src/app/stretch/stretch.component.scss
@@ -1,391 +1,5 @@
-.center-align {
-	text-align: center;
-}
+@import '../common-project';
 
-.stretch-page {
-  //font-family: 'Lato', sans-serif;
-  font-weight: 300;
-  font-size: 17px;
-  //padding: 40px;
-  -webkit-text-stroke: 0.45px;
-  -webkit-font-smoothing: antialiased;
-  letter-spacing: 0.01rem;
-  //font-size: 24px;
-
-  font-family: 'Lato', 'Helvetica Neue', Helvetica, sans-serif;
-
-  h1 {
-  	font-style: bold;
-  }
-}
-
-.section {
-	margin-bottom: 100px;
-}
-
-.titles {
-
-}
-
-.quote {
-	.sentence {
-		font-style: italic;
-		font-size: 25px;
-	}
-	.source {
-		font-size: 15px;
-	}
-	.quote-mark {
-		font-size: 60px;
-		font-family: 'Roboto Slab', sans-serif;
-	}
-
-	border-left: 2px solid black;
-	padding-left: 15px;
-	margin-left: 30px;
-}
-
-.icon1 {
-	font-size: 50px;
-}
-
-.research-icons {
-	.icon-title {
-		font-size: 16px;
-		font-weight: bold;
-	}
-
-	.icon-intro {
-		font-size: 15px;
-	}
-}
-
-.part-img {
-	width: 100%;
-}
-
-.img-70 {
-	width: 70%;
-	text-align: center;
-	margin-left: auto;
-	margin-right: auto;
-	display: block;
-}
-
-.img-70-left {
-	width: 70%;
-}
-
-.img-50 {
-	width: 50%;
-	text-align: center;
-	margin-left: auto;
-	margin-right: auto;
-	display: block;
-}
-
-.icon-img {
-	max-width: 100px;
-}
-
-.research-step-icons {
-	.icon-img {
-		margin-bottom: 10px;
-	}
-
-	.icon-title {
-		font-size: 20px;
-		font-weight: bold;
-		margin-bottom: 10px;
-	}
-
-	.icon-intro {
-		font-size: 15px;
-	}
-}
-
-.left-align{
-	text-align: left;
-}
-
-.sub-title {
-	//font-weight: bold;
-	font-size: 14px;
-	color: gray;
-	margin-bottom: 0px;
-	font-family: 'Roboto Slab', sans-serif;
-}
-
-.sub-big-title {
-	font-weight: bold;
-	font-size: 25px;
-	font-family: 'Roboto Slab', sans-serif;
-}
-
-.insight-list {
-	border-left: 2px solid black;
-	padding-left: 30px;
-	margin-left: 30px;
-}
-
-.photo-img {
-	max-width: 100%;
-	margin-bottom: 10px;
-}
-
-.interview-expert-photos {
-	font-size: 15px;
-	.icon-title {
-		font-weight: bold;
-		margin-bottom: 5px;
-	}
-}
-
-.interview-photos {
-	.col-lg-6, .col-sm-6 {
-		padding-left: 0px !important;
-		padding-right: 2px !important;
-		margin-left: 0px !important;
-		margin-right: 0px !important;
-	}
-}
-
-.note-paragraph {
-	font-size: 12px;
-	text-align: center;
-}
-
-.scenario-section {
-	.col-lg-5, .col-sm-5 {
-		padding-left: 0px !important;
-		padding-right: 0px !important;
-	}
-}
-
-.vertical-align {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-
-.width-45 {
-	width: 48%;
-	display: inline-block;
-}
-
-.width-5 {
-	width: 4%;
-	display: inline-block;
-}
-
-.graph-insight-list {
-	font-size: 16px;
-}
-
-.margin-15 {
-	margin-bottom: 15px;
-}
-
-.intext-emphasis {
-	color: #84AF4A;
-	font-size: 30px;
-}
-
-.color-emphasis-neg {
-	color: #FF7D57;
-}
-
-.color-emphasis {
-	color: #84AF4A;
-}
-
-.insight-title {
-	font-size: 20px;
-}
-
-.insight-title-medium {
-	font-size: 18px;
-}
-
-.insight-title-3 {
-	font-size:16px;
-	font-weight: bold;
-}
-
-.method-title {
-	font-weight: bold;
-	font-size: 16px;
-}
-
-.method-content {
-	font-size: 14px;
-}
-
-.big-part {
-	//margin-bottom: 200px;
-	padding-top: 100px;
-	padding-bottom: 100px;
-	background: black;
-	width: 100vw;
-}
-
-.big-part:nth-child(even){
-	background: white;
-
-	.big-part-title {
-		color: #E0E0E0;
-	}
-}
-
-.big-part:nth-child(odd){
-	background: #F9F9F9;
-
-	.big-part-title {
-		color: #d4d4d4;
-	}
-}
-
-.big-part-inner {
-	padding-left: 100px;
-	padding-right: 100px;
-}
-
-.insight-med-title {
-	font-size: 18px;
-}
-
-.insight-med-content {
-	font-size: 16px;
-}
-
-.insight-content-medium {
-	font-size: 15px;
-}
-
-.big-part-title {
-	font-family: 'Roboto Slab', sans-serif;
-	font-size: 72px;
-	font-weight: 300;
-}
-
-.big-part-sub-title {
-	font-size: 25px;
-	font-weight: bold;
-}
-
-.big-part-head {
-	margin-bottom: 80px;
-}
-
-.emphasis-title {
-	font-size: 30px;
-}
-
-.large-font-content {
-	font-size: 22px;
-	padding-left: 100px;
-	padding-right: 100px;
-}
-
-.mid-font-content {
-	padding-left: 100px;
-	padding-right: 100px;
-}
-
-.question {
-	font-family: 'Roboto Slab', sans-serif;
-	//font-weight: bold;
-}
-
-.margin-50 {
-	//margin-top: 50px;
-	margin-bottom: 50px;
-}
-
-.small-section {
-	margin-bottom: 50px;
-}
-
-.demo-frame {
-	position: relative;
-	top: 0;
-	left: 0;
-	padding: 0px !important;
-}
-
-.demo-iphone-bg {
-	position: relative;
-	width: 100%;
-	top: 0;
-	left: 0;
-}
-
-.demo-animation {
-	position: absolute;
-	width: 85.96%;
-	top: 12.23%;
-	left: 7.02%;
-}
-
-.demo-intro {
-	padding-top: 70px;
-
-	.demo-title {
-		font-family: 'Roboto Slab', sans-serif;
-		font-size: 22px;
-		margin-bottom: 0px;
-		//font-weight: bold;
-	}
-
-	.demo-subtitle {
-		font-family: 'Roboto Slab', sans-serif;
-		font-weight: 100;
-		-webkit-text-stroke: 0px;
-	}
-
-	.demo-description {
-		padding-top: 50px;
-		font-size: 15px;
-	}
-}
-
-.demo-section {
-	margin-bottom: 100px;
-}
-
-.banner {
-	background-color: #84AF4A;
-	padding-top: 100px;
-	padding-bottom: 100px;
-	padding-left: 100px;
-	padding-right: 100px;
-
-	color: white;
-
-	.banner-title {
-		font-family: 'GFS Didot', serif;
-		font-style: italic;
-		-webkit-text-stroke: 0px;
-		font-size: 72px;
-	}
-
-	.banner-subtitle {
-		font-size: 20px;
-	}
-
-	.attributes {
-		margin-top: 65px;
-		font-size: 13px;
-	}
-
-	.attribute1 {
-		margin-bottom: 20px;
-	}
-
-	.attribute-content {
-		-webkit-text-stroke: 0px;
-	}
-}
 
 .navbar {
 	background-color: #84AF4A;
